name:                repo-bisect
version:             0.1.0.0
homepage:            https://github.com/aartamonau/repo-bisect
license:             GPL-3
license-file:        LICENSE
author:              Aliaksey Artamonau
maintainer:          aliaksiej.artamonau@gmail.com
category:            Utility
build-type:          Simple
cabal-version:       >=1.8


executable repo-snapshot
  build-depends:       base ==4.6.*, filepath, directory, filelock,
                       gitlib, gitlib-libgit2, data-default, ui-command,
                       transformers, text, shelly, tagged, time, git-date,
                       monad-control, mtl, xml
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  main-is:             RepoSnapshot.hs
